--- a/team_page/index2.html
+++ b/team_page/index2.html
@@ -36,7 +36,7 @@
 	======================================================= -->
 
 </head>
-
+<style>p.indent{ padding-left: 10em }</style>
 <body>
 	<header class="header" id="header">
 		<!--header-start-->
@@ -262,9 +262,11 @@
 		<div class="container">
 			<h2>team</h2>
 			<h6>Take a closer look into our amazing team. We won’t bite.</h6>
-			<h2>Chief Editors</h2>
+			<p class="indent"><h2>Chief Editors</h2></p>
 			<br>
+
 			<div class="team-leader-block clearfix">
+				<p class="indent"></p>
 				<div class="team-leader-box">
 					<div class="team-leader wow fadeInDown delay-03s">
 						<div class="team-leader-shadow"><a href="#"></a></div>
@@ -295,9 +297,8 @@
 					<span class="wow fadeInDown delay-06s">Chief Editor</span>
 					<p class="wow fadeInDown delay-06s">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin consequat sollicitudin cursus. Dolor sit amet, consectetur adipiscing elit proin consequat.</p>
 				</div>
-				<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-				<h2>Editorial Board Members</h2>
-				<br>
+			<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+			<h2>Editorial Board Members</h2>
 				<div class="team-leader-box">
 					<div class="team-leader  wow fadeInDown delay-06s">
 						<div class="team-leader-shadow"><a href="#"></a></div>
@@ -319,9 +320,9 @@
 						<img src="img/Alok.jpg" alt="">
 						<ul>
 							<li><a href="#" class="fa fa-twitter"></a></li>
-							<li><a href="#" class="fa fa-facebook"></a></li>
+							<li><a href="https://www.facebook.com/alokrnjn1" class="fa fa-facebook"></a></li>
 							<li><a href="#" class="fa fa-pinterest"></a></li>
-							<li><a href="#" class="fa fa-google-plus"></a></li>
+							<li><a href="ranjan.alok.iitb@gmail.com" class="fa fa-google-plus"></a></li>
 						</ul>
 					</div>
 					<h3 class="wow fadeInDown delay-06s">Alok Ranjan</h3>
@@ -393,7 +394,7 @@
 				<div class="team-leader-box">
 					<div class="team-leader  wow fadeInDown delay-06s">
 						<div class="team-leader-shadow"><a href="#"></a></div>
-						<img src="img/Athul.jpg" alt="">
+						<img src="img/Ayan.jpg" alt="">
 						<ul>
 							<li><a href="#" class="fa fa-twitter"></a></li>
 							<li><a href="#" class="fa fa-facebook"></a></li>
@@ -423,7 +424,7 @@
 				<div class="team-leader-box">
 					<div class="team-leader  wow fadeInDown delay-06s">
 						<div class="team-leader-shadow"><a href="#"></a></div>
-						<img src="img/Cherub.jpg" alt="">
+						<img src="img/lovesh.jpg" alt="">
 						<ul>
 							<li><a href="#" class="fa fa-twitter"></a></li>
 							<li><a href="#" class="fa fa-facebook"></a></li>
@@ -453,7 +454,7 @@
 				<div class="team-leader-box">
 					<div class="team-leader  wow fadeInDown delay-06s">
 						<div class="team-leader-shadow"><a href="#"></a></div>
-						<img src="img/mahima.jpg" alt="">
+						<img src="img/purush.jpg" alt="">
 						<ul>
 							<li><a href="#" class="fa fa-twitter"></a></li>
 							<li><a href="#" class="fa fa-facebook"></a></li>
@@ -465,6 +466,240 @@
 					<span class="wow fadeInDown delay-06s">Editorial Board Member</span>
 					<p class="wow fadeInDown delay-06s"></p>
 				</div>
+				<div class="team-leader-box">
+					<div class="team-leader  wow fadeInDown delay-06s">
+						<div class="team-leader-shadow"><a href="#"></a></div>
+						<img src="img/mahima.jpg" alt="">
+						<ul>
+							<li><a href="#" class="fa fa-twitter"></a></li>
+							<li><a href="#" class="fa fa-facebook"></a></li>
+							<li><a href="#" class="fa fa-pinterest"></a></li>
+							<li><a href="#" class="fa fa-google-plus"></a></li>
+						</ul>
+					</div>
+					<h3 class="wow fadeInDown delay-06s">Pushkar Lohiya</h3>
+					<span class="wow fadeInDown delay-06s">Editorial Board Member</span>
+					<p class="wow fadeInDown delay-06s"></p>
+				</div>
+				<div class="team-leader-box">
+					<div class="team-leader  wow fadeInDown delay-06s">
+						<div class="team-leader-shadow"><a href="#"></a></div>
+						<img src="img/sid.jpg" alt="">
+						<ul>
+							<li><a href="#" class="fa fa-twitter"></a></li>
+							<li><a href="#" class="fa fa-facebook"></a></li>
+							<li><a href="#" class="fa fa-pinterest"></a></li>
+							<li><a href="#" class="fa fa-google-plus"></a></li>
+						</ul>
+					</div>
+					<h3 class="wow fadeInDown delay-06s">Siddharth Mehta</h3>
+					<span class="wow fadeInDown delay-06s">Editorial Board Member</span>
+					<p class="wow fadeInDown delay-06s">Creative. Versatile. Weird. Slytherin.</p>
+				</div>
+				<div class="team-leader-box">
+					<div class="team-leader  wow fadeInDown delay-06s">
+						<div class="team-leader-shadow"><a href="#"></a></div>
+						<img src="img/Suman.jpg" alt="">
+						<ul>
+							<li><a href="#" class="fa fa-twitter"></a></li>
+							<li><a href="#" class="fa fa-facebook"></a></li>
+							<li><a href="#" class="fa fa-pinterest"></a></li>
+							<li><a href="#" class="fa fa-google-plus"></a></li>
+						</ul>
+					</div>
+					<h3 class="wow fadeInDown delay-06s">Suman Mondal</h3>
+					<span class="wow fadeInDown delay-06s">Editorial Board Member</span>
+					<p class="wow fadeInDown delay-06s">Poetry, Music, Literaure and Research are life love, of course without any order. Some raw conversation over a cup of coffee is my kind of physical activity.</p>
+				</div>
+				<div class="team-leader-box">
+					<div class="team-leader  wow fadeInDown delay-06s">
+						<div class="team-leader-shadow"><a href="#"></a></div>
+						<img src="img/Suman.jpg" alt="">
+						<ul>
+							<li><a href="#" class="fa fa-twitter"></a></li>
+							<li><a href="#" class="fa fa-facebook"></a></li>
+							<li><a href="#" class="fa fa-pinterest"></a></li>
+							<li><a href="#" class="fa fa-google-plus"></a></li>
+						</ul>
+					</div>
+					<h3 class="wow fadeInDown delay-06s">Tanmay Goyal</h3>
+					<span class="wow fadeInDown delay-06s">Editorial Board Member</span>
+					<p class="wow fadeInDown delay-06s">A sharp actor, fiery pacer, & quite decent with the quill in hand. I can be found obsessing over the highlights of some long lost Sachin Tendulkar innings!</p>
+				</div>
+				<div class="team-leader-box">
+					<div class="team-leader  wow fadeInDown delay-06s">
+						<div class="team-leader-shadow"><a href="#"></a></div>
+						<img src="img/Tushar.jpg" alt="">
+						<ul>
+							<li><a href="#" class="fa fa-twitter"></a></li>
+							<li><a href="#" class="fa fa-facebook"></a></li>
+							<li><a href="#" class="fa fa-pinterest"></a></li>
+							<li><a href="#" class="fa fa-google-plus"></a></li>
+						</ul>
+					</div>
+					<h3 class="wow fadeInDown delay-06s">Tushar Kumar</h3>
+					<span class="wow fadeInDown delay-06s">Editorial Board Member</span>
+					<p class="wow fadeInDown delay-06s">Engrossed in the tomes of cosmos,metaphysics,consciousness.Hold prowess in international politics,diplomacy & war affairs.Elegant batsman,deathly pacer.</p>
+				</div>
+				<div class="team-leader-box">
+					<div class="team-leader  wow fadeInDown delay-06s">
+						<div class="team-leader-shadow"><a href="#"></a></div>
+						<img src="img/Vipul.jpg" alt="">
+						<ul>
+							<li><a href="#" class="fa fa-twitter"></a></li>
+							<li><a href="#" class="fa fa-facebook"></a></li>
+							<li><a href="#" class="fa fa-pinterest"></a></li>
+							<li><a href="#" class="fa fa-google-plus"></a></li>
+						</ul>
+					</div>
+					<h3 class="wow fadeInDown delay-06s">Vipul Ramtekkar</h3>
+					<span class="wow fadeInDown delay-06s">Editorial Board Member</span>
+					<p class="wow fadeInDown delay-06s"></p>
+				</div>
+				<div class="team-leader-box">
+					<div class="team-leader  wow fadeInDown delay-06s">
+						<div class="team-leader-shadow"><a href="#"></a></div>
+						<img src="img/yash.jpg" alt="">
+						<ul>
+							<li><a href="#" class="fa fa-twitter"></a></li>
+							<li><a href="#" class="fa fa-facebook"></a></li>
+							<li><a href="#" class="fa fa-pinterest"></a></li>
+							<li><a href="#" class="fa fa-google-plus"></a></li>
+						</ul>
+					</div>
+					<h3 class="wow fadeInDown delay-06s">Yashaswini Chauhan</h3>
+					<span class="wow fadeInDown delay-06s">Editorial Board Member</span>
+					<p class="wow fadeInDown delay-06s">Drunk on Butterbeer, high on stationary. Philosophical sometimes, a kid always.</p>
+				</div>
+			<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+			<h2>Design Team</h2>
+			<br>
+				<div class="team-leader-box">
+					<div class="team-leader  wow fadeInDown delay-06s">
+						<div class="team-leader-shadow"><a href="#"></a></div>
+						<img src="img/aditya.jpg" alt="">
+						<ul>
+							<li><a href="#" class="fa fa-twitter"></a></li>
+							<li><a href="#" class="fa fa-facebook"></a></li>
+							<li><a href="#" class="fa fa-pinterest"></a></li>
+							<li><a href="#" class="fa fa-google-plus"></a></li>
+						</ul>
+					</div>
+					<h3 class="wow fadeInDown delay-06s">Aditya Patil</h3>
+					<span class="wow fadeInDown delay-06s">Design Manager</span>
+					<p class="wow fadeInDown delay-06s"></p>
+				</div>
+				<div class="team-leader-box">
+					<div class="team-leader  wow fadeInDown delay-06s">
+						<div class="team-leader-shadow"><a href="#"></a></div>
+						<img src="img/Dp.jpg" alt="">
+						<ul>
+							<li><a href="#" class="fa fa-twitter"></a></li>
+							<li><a href="#" class="fa fa-facebook"></a></li>
+							<li><a href="#" class="fa fa-pinterest"></a></li>
+							<li><a href="#" class="fa fa-google-plus"></a></li>
+						</ul>
+					</div>
+					<h3 class="wow fadeInDown delay-06s">Ameya Nikose</h3>
+					<span class="wow fadeInDown delay-06s">Design Manager</span>
+					<p class="wow fadeInDown delay-06s"></p>
+				</div>
+				<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+				<div class="team-leader-box">
+					<div class="team-leader  wow fadeInDown delay-06s">
+						<div class="team-leader-shadow"><a href="#"></a></div>
+						<img src="img/Dp.jpg" alt="">
+						<ul>
+							<li><a href="#" class="fa fa-twitter"></a></li>
+							<li><a href="#" class="fa fa-facebook"></a></li>
+							<li><a href="#" class="fa fa-pinterest"></a></li>
+							<li><a href="#" class="fa fa-google-plus"></a></li>
+						</ul>
+					</div>
+					<h3 class="wow fadeInDown delay-06s">Akanksha Sachan</h3>
+					<span class="wow fadeInDown delay-06s">Design Convener</span>
+					<p class="wow fadeInDown delay-06s"></p>
+				</div>
+				<div class="team-leader-box">
+					<div class="team-leader  wow fadeInDown delay-06s">
+						<div class="team-leader-shadow"><a href="#"></a></div>
+						<img src="img/krishna.png" alt="">
+						<ul>
+							<li><a href="#" class="fa fa-twitter"></a></li>
+							<li><a href="#" class="fa fa-facebook"></a></li>
+							<li><a href="#" class="fa fa-pinterest"></a></li>
+							<li><a href="#" class="fa fa-google-plus"></a></li>
+						</ul>
+					</div>
+					<h3 class="wow fadeInDown delay-06s">Krishna Nair</h3>
+					<span class="wow fadeInDown delay-06s">Design Convener</span>
+					<p class="wow fadeInDown delay-06s"></p>
+				</div>
+			<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+			<h2>Web Team</h2>
+				<div class="team-leader-box">
+					<div class="team-leader  wow fadeInDown delay-06s">
+						<div class="team-leader-shadow"><a href="#"></a></div>
+						<img src="img/kushal.jpg" alt="">
+						<ul>
+							<li><a href="#" class="fa fa-twitter"></a></li>
+							<li><a href="#" class="fa fa-facebook"></a></li>
+							<li><a href="#" class="fa fa-pinterest"></a></li>
+							<li><a href="#" class="fa fa-google-plus"></a></li>
+						</ul>
+					</div>
+					<h3 class="wow fadeInDown delay-06s">Kushal Yadav</h3>
+					<span class="wow fadeInDown delay-06s">Web Manager</span>
+					<p class="wow fadeInDown delay-06s">This guy is awesome -></p>
+				</div>
+				<div class="team-leader-box">
+					<div class="team-leader  wow fadeInDown delay-06s">
+						<div class="team-leader-shadow"><a href="#"></a></div>
+						<img src="img/silu.jpg" alt="">
+						<ul>
+							<li><a href="#" class="fa fa-twitter"></a></li>
+							<li><a href="#" class="fa fa-facebook"></a></li>
+							<li><a href="#" class="fa fa-pinterest"></a></li>
+							<li><a href="#" class="fa fa-google-plus"></a></li>
+						</ul>
+					</div>
+					<h3 class="wow fadeInDown delay-06s">Silu Panda</h3>
+					<span class="wow fadeInDown delay-06s">Web Manager</span>
+					<p class="wow fadeInDown delay-06s">01100010 01100101 01101100 01101001 01100101 01110110 01100101 01110010</p>
+				</div>
+				<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+				<div class="team-leader-box">
+					<div class="team-leader  wow fadeInDown delay-06s">
+						<div class="team-leader-shadow"><a href="#"></a></div>
+						<img src="img/bhavesh.jpg" alt="">
+						<ul>
+							<li><a href="#" class="fa fa-twitter"></a></li>
+							<li><a href="#" class="fa fa-facebook"></a></li>
+							<li><a href="#" class="fa fa-pinterest"></a></li>
+							<li><a href="#" class="fa fa-google-plus"></a></li>
+						</ul>
+					</div>
+					<h3 class="wow fadeInDown delay-06s">Bhavesh Patil</h3>
+					<span class="wow fadeInDown delay-06s">Web Convener</span>
+					<p class="wow fadeInDown delay-06s">Exploring tech. Coding is Love.</p>
+				</div>
+				<div class="team-leader-box">
+					<div class="team-leader  wow fadeInDown delay-06s">
+						<div class="team-leader-shadow"><a href="#"></a></div>
+						<img src="img/bhavesh.jpg" alt="">
+						<ul>
+							<li><a href="#" class="fa fa-twitter"></a></li>
+							<li><a href="#" class="fa fa-facebook"></a></li>
+							<li><a href="#" class="fa fa-pinterest"></a></li>
+							<li><a href="#" class="fa fa-google-plus"></a></li>
+						</ul>
+					</div>
+					<h3 class="wow fadeInDown delay-06s">Shubojit Das</h3>
+					<span class="wow fadeInDown delay-06s">Web Convener</span>
+					<p class="wow fadeInDown delay-06s">Exploring tech. Coding is Love.</p>
+				</div>
+
+
 
 			</div>
 		</div>
