--- a/team_page/index.html
+++ b/team_page/index.html
@@ -214,7 +214,7 @@
 					</div>
 					<h3 class="wow fadeInDown delay-06s">Cherub Kapoor</h3>
 					<span class="wow fadeInDown delay-06s">Editorial Board Member</span>
-					<p class="wow fadeInDown delay-06s">A wannabe sophrosyne.</p>
+					<p class="wow fadeInDown delay-06s">On an intellectual journey towards sophrosyne-ity, currently fighting my engagement in tsundoku.</p>
 				</div>
 				<div class="team-leader-box">
 					<div class="team-leader  wow fadeInDown delay-06s">
@@ -244,7 +244,7 @@
 					</div>
 					<h3 class="wow fadeInDown delay-06s">Mahima Sethi</h3>
 					<span class="wow fadeInDown delay-06s">Editorial Board Member</span>
-					<p class="wow fadeInDown delay-06s"></p>
+					<p class="wow fadeInDown delay-06s">Just another human being with a rather grim philosophy of life. Also I think and overthink.</p>
 				</div>
 				<div class="team-leader-box">
 					<div class="team-leader  wow fadeInDown delay-06s">
