--- a/team_page/index.html
+++ b/team_page/index.html
@@ -107,7 +107,7 @@
 					</div>
 					<h3 class="wow fadeInDown delay-06s">Abhinav Anand</h3>
 					<span class="wow fadeInDown delay-06s">Editorial Board Member</span>
-					<p class="wow fadeInDown delay-06s">A avid tennis fan, loves to be on the court. </p>
+					<p class="wow fadeInDown delay-06s">An avid tennis fan, loves to be on the court. </p>
 				</div>
 				<div class="team-leader-box">
 					<div class="team-leader  wow fadeInDown delay-06s">
@@ -334,7 +334,7 @@
 					</div>
 					<h3 class="wow fadeInDown delay-06s">Tushar Kumar</h3>
 					<span class="wow fadeInDown delay-06s">Editorial Board Member</span>
-					<p class="wow fadeInDown delay-06s">Engrossed in the tomes of cosmos,metaphysics,consciousness.</p>
+					<p class="wow fadeInDown delay-06s">Wait a min... I'll write some one-liner then.</p>
 				</div>
 				<div class="team-leader-box">
 					<div class="team-leader  wow fadeInDown delay-06s">
