--- a/team_page/index.html
+++ b/team_page/index.html
@@ -364,7 +364,7 @@
 					</div>
 					<h3 class="wow fadeInDown delay-06s">Yashaswini Chauhan</h3>
 					<span class="wow fadeInDown delay-06s">Editorial Board Member</span>
-					<p class="wow fadeInDown delay-06s">Drunk on Butterbeer, high on stationary. Philosophical sometimes, a kid always.</p>
+					<p class="wow fadeInDown delay-06s">Drunk on Butterbeer, high on stationery. Philosophical sometimes, a kid always.</p>
 				</div>
 			<br><br><br><br>
 			<h2>Design Team</h2>
