--- a/team_page/index.html
+++ b/team_page/index.html
@@ -74,7 +74,7 @@
 					</div>
 					<h3 class="wow fadeInDown delay-03s">Saman Siddiqui</h3>
 					<span class="wow fadeInDown delay-03s">Chief Editor</span>
-					<p class="wow fadeInDown delay-03s">It's a mystery</p>
+					<p class="wow fadeInDown delay-03s"></p>
 				</div>
 				<div class="team-leader-box">
 					<div class="team-leader  wow fadeInDown delay-06s">
@@ -89,7 +89,7 @@
 					</div>
 					<h3 class="wow fadeInDown delay-06s">Varun Sule</h3>
 					<span class="wow fadeInDown delay-06s">Chief Editor</span>
-					<p class="wow fadeInDown delay-06s">Mystery too.</p>
+					<p class="wow fadeInDown delay-06s"></p>
 				</div>
 			<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 		</center>
@@ -274,7 +274,7 @@
 					</div>
 					<h3 class="wow fadeInDown delay-06s">Pushkar Lohiya</h3>
 					<span class="wow fadeInDown delay-06s">Editorial Board Member</span>
-					<p class="wow fadeInDown delay-06s"></p>
+					<p class="wow fadeInDown delay-06s">A SitCom addict with an unbroken New Year's Resolution to watch no more. A wannabe bibliophile.</p>
 				</div>
 				<div class="team-leader-box">
 					<div class="team-leader  wow fadeInDown delay-06s">
@@ -319,7 +319,7 @@
 					</div>
 					<h3 class="wow fadeInDown delay-06s">Tanmay Goyal</h3>
 					<span class="wow fadeInDown delay-06s">Editorial Board Member</span>
-					<p class="wow fadeInDown delay-06s">A sharp actor, fiery pacer, & quite decent with the quill in hand.</p>
+					<p class="wow fadeInDown delay-06s">A sharp actor, fiery pacer & quite decent with the quill in hand.</p>
 				</div>
 				<div class="team-leader-box">
 					<div class="team-leader  wow fadeInDown delay-06s">
@@ -334,7 +334,7 @@
 					</div>
 					<h3 class="wow fadeInDown delay-06s">Tushar Kumar</h3>
 					<span class="wow fadeInDown delay-06s">Editorial Board Member</span>
-					<p class="wow fadeInDown delay-06s">Wait a min... I'll write some one-liner then.</p>
+					<p class="wow fadeInDown delay-06s">Engrossed in the tomes of cosmos,metaphysics.Believes Life is Conundrum esoterica.Music,poetry,aesthetic designs & creative literature form my daily cognitive diets.  </p>
 				</div>
 				<div class="team-leader-box">
 					<div class="team-leader  wow fadeInDown delay-06s">
@@ -524,7 +524,7 @@
 					</div>
 					<h3 class="wow fadeInDown delay-06s">Devansh Bangad</h3>
 					<span class="wow fadeInDown delay-06s">DataGiri Analyst</span>
-					<p class="wow fadeInDown delay-06s">Figuring out the best way to live since 2000</p>
+					<p class="wow fadeInDown delay-06s">A table Tennis lover, debator and I love making theories and thinking and overthinking on them</p>
 				</div>
 			<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
@@ -541,7 +541,7 @@
 						</div>
 						<h3 class="wow fadeInDown delay-06s">Soham De</h3>
 						<span class="wow fadeInDown delay-06s">DataGiri Member</span>
-						<p class="wow fadeInDown delay-06s">To hit me up, the magic words are Quizzing  especially History, Politics, European Mythology, huge gamer (Dota 2).</p>
+						<p class="wow fadeInDown delay-06s">To hit me up, the magic words are Quizzing  especially History, Politics, European Mythology,  huge gamer (Dota 2), Food Outings and Weekend Trips.</p>
 				</div>
 
 				<div class="team-leader-box">
