--- a/team_page/index.html
+++ b/team_page/index.html
@@ -63,7 +63,7 @@
 				<p class="indent"></p>
 				<div class="team-leader-box">
 					<div class="team-leader wow fadeInDown delay-03s">
-						<div class="team-leader-shadow"><a href="#"></a></div>
+						<div class="team-leader-shadow"></div>
 						<img src="img/saman.jpg" alt="">
 						<ul>
 							<li><a href="#" class="fa fa-twitter"></a></li>
@@ -78,7 +78,7 @@
 				</div>
 				<div class="team-leader-box">
 					<div class="team-leader  wow fadeInDown delay-06s">
-						<div class="team-leader-shadow"><a href="#"></a></div>
+						<div class="team-leader-shadow"></div>
 						<img src="img/Varun.jpg" alt="">
 						<ul>
 							<li><a href="#" class="fa fa-twitter"></a></li>
@@ -96,7 +96,7 @@
 			<h2>Editorial Board Members</h2>
 				<div class="team-leader-box">
 					<div class="team-leader  wow fadeInDown delay-06s">
-						<div class="team-leader-shadow"><a href="#"></a></div>
+						<div class="team-leader-shadow"></div>
 						<img src="img/abhinav_anand.jpeg" alt="">
 						<ul>
 							<li><a href="#" class="fa fa-twitter"></a></li>
@@ -111,7 +111,7 @@
 				</div>
 				<div class="team-leader-box">
 					<div class="team-leader  wow fadeInDown delay-06s">
-						<div class="team-leader-shadow"><a href="#"></a></div>
+						<div class="team-leader-shadow"></div>
 						<img src="img/Alok.jpg" alt="">
 						<ul>
 							<li><a href="#" class="fa fa-twitter"></a></li>
@@ -126,7 +126,7 @@
 				</div>
 				<div class="team-leader-box">
 					<div class="team-leader  wow fadeInDown delay-06s">
-						<div class="team-leader-shadow"><a href="#"></a></div>
+						<div class="team-leader-shadow"></div>
 						<img src="img/amogh2.jpg" alt="">
 						<ul>
 							<li><a href="#" class="fa fa-twitter"></a></li>
@@ -142,7 +142,7 @@
 				<br>
 				<div class="team-leader-box">
 					<div class="team-leader  wow fadeInDown delay-06s">
-						<div class="team-leader-shadow"><a href="#"></a></div>
+						<div class="team-leader-shadow"></div>
 						<img src="img/Apurva.jpg" alt="">
 						<ul>
 							<li><a href="#" class="fa fa-twitter"></a></li>
@@ -158,7 +158,7 @@
 				</div>
 				<div class="team-leader-box">
 					<div class="team-leader  wow fadeInDown delay-06s">
-						<div class="team-leader-shadow"><a href="#"></a></div>
+						<div class="team-leader-shadow"></div>
 						<img src="img/Atharva.jpg" alt="">
 						<ul>
 							<li><a href="#" class="fa fa-twitter"></a></li>
@@ -173,7 +173,7 @@
 				</div>
 				<div class="team-leader-box">
 					<div class="team-leader  wow fadeInDown delay-06s">
-						<div class="team-leader-shadow"><a href="#"></a></div>
+						<div class="team-leader-shadow"></div>
 						<img src="img/Athul.JPG" alt="">
 						<ul>
 							<li><a href="#" class="fa fa-twitter"></a></li>
@@ -188,7 +188,7 @@
 				</div>
 				<div class="team-leader-box">
 					<div class="team-leader  wow fadeInDown delay-06s">
-						<div class="team-leader-shadow"><a href="#"></a></div>
+						<div class="team-leader-shadow"></div>
 						<img src="img/Ayan.JPG" alt="">
 						<ul>
 							<li><a href="#" class="fa fa-twitter"></a></li>
@@ -203,7 +203,7 @@
 				</div>
 				<div class="team-leader-box">
 					<div class="team-leader  wow fadeInDown delay-06s">
-						<div class="team-leader-shadow"><a href="#"></a></div>
+						<div class="team-leader-shadow"></div>
 						<img src="img/Cherub_kapoor.JPG" alt="">
 						<ul>
 							<li><a href="#" class="fa fa-twitter"></a></li>
@@ -218,7 +218,7 @@
 				</div>
 				<div class="team-leader-box">
 					<div class="team-leader  wow fadeInDown delay-06s">
-						<div class="team-leader-shadow"><a href="#"></a></div>
+						<div class="team-leader-shadow"></div>
 						<img src="img/lovesh.jpg" alt="">
 						<ul>
 							<li><a href="#" class="fa fa-twitter"></a></li>
@@ -233,7 +233,7 @@
 				</div>
 				<div class="team-leader-box">
 					<div class="team-leader  wow fadeInDown delay-06s">
-						<div class="team-leader-shadow"><a href="#"></a></div>
+						<div class="team-leader-shadow"></div>
 						<img src="img/mahima.jpg" alt="">
 						<ul>
 							<li><a href="#" class="fa fa-twitter"></a></li>
@@ -248,7 +248,7 @@
 				</div>
 				<div class="team-leader-box">
 					<div class="team-leader  wow fadeInDown delay-06s">
-						<div class="team-leader-shadow"><a href="#"></a></div>
+						<div class="team-leader-shadow"></div>
 						<img src="img/purush.jpg" alt="">
 						<ul>
 							<li><a href="#" class="fa fa-twitter"></a></li>
@@ -263,7 +263,7 @@
 				</div>
 				<div class="team-leader-box">
 					<div class="team-leader  wow fadeInDown delay-06s">
-						<div class="team-leader-shadow"><a href="#"></a></div>
+						<div class="team-leader-shadow"></div>
 						<img src="img/pushkar_lohiya.jpg" alt="">
 						<ul>
 							<li><a href="#" class="fa fa-twitter"></a></li>
@@ -278,7 +278,7 @@
 				</div>
 				<div class="team-leader-box">
 					<div class="team-leader  wow fadeInDown delay-06s">
-						<div class="team-leader-shadow"><a href="#"></a></div>
+						<div class="team-leader-shadow"></div>
 						<img src="img/sid.jpg" alt="">
 						<ul>
 							<li><a href="#" class="fa fa-twitter"></a></li>
@@ -293,7 +293,7 @@
 				</div>
 				<div class="team-leader-box">
 					<div class="team-leader  wow fadeInDown delay-06s">
-						<div class="team-leader-shadow"><a href="#"></a></div>
+						<div class="team-leader-shadow"></div>
 						<img src="img/Suman.jpg" alt="">
 						<ul>
 							<li><a href="#" class="fa fa-twitter"></a></li>
@@ -308,7 +308,7 @@
 				</div>
 				<div class="team-leader-box">
 					<div class="team-leader  wow fadeInDown delay-06s">
-						<div class="team-leader-shadow"><a href="#"></a></div>
+						<div class="team-leader-shadow"></div>
 						<img src="img/tanmay_goyal.jpg" alt="">
 						<ul>
 							<li><a href="#" class="fa fa-twitter"></a></li>
@@ -323,7 +323,7 @@
 				</div>
 				<div class="team-leader-box">
 					<div class="team-leader  wow fadeInDown delay-06s">
-						<div class="team-leader-shadow"><a href="#"></a></div>
+						<div class="team-leader-shadow"></div>
 						<img src="img/Tushar.jpg" alt="">
 						<ul>
 							<li><a href="#" class="fa fa-twitter"></a></li>
@@ -338,7 +338,7 @@
 				</div>
 				<div class="team-leader-box">
 					<div class="team-leader  wow fadeInDown delay-06s">
-						<div class="team-leader-shadow"><a href="#"></a></div>
+						<div class="team-leader-shadow"></div>
 						<img src="img/vipul.jpg" alt="">
 						<ul>
 							<li><a href="#" class="fa fa-twitter"></a></li>
@@ -353,7 +353,7 @@
 				</div>
 				<div class="team-leader-box">
 					<div class="team-leader  wow fadeInDown delay-06s">
-						<div class="team-leader-shadow"><a href="#"></a></div>
+						<div class="team-leader-shadow"></div>
 						<img src="img/yash.jpg" alt="">
 						<ul>
 							<li><a href="#" class="fa fa-twitter"></a></li>
@@ -371,7 +371,7 @@
 			<br>
 				<div class="team-leader-box">
 					<div class="team-leader  wow fadeInDown delay-06s">
-						<div class="team-leader-shadow"><a href="#"></a></div>
+						<div class="team-leader-shadow"></div>
 						<img src="img/aditya.jpg" alt="">
 						<ul>
 							<li><a href="#" class="fa fa-twitter"></a></li>
@@ -386,7 +386,7 @@
 				</div>
 				<div class="team-leader-box">
 					<div class="team-leader  wow fadeInDown delay-06s">
-						<div class="team-leader-shadow"><a href="#"></a></div>
+						<div class="team-leader-shadow"></div>
 						<img src="img/Dp.jpg" alt="">
 						<ul>
 							<li><a href="#" class="fa fa-twitter"></a></li>
@@ -402,7 +402,7 @@
 				<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 				<div class="team-leader-box">
 					<div class="team-leader  wow fadeInDown delay-06s">
-						<div class="team-leader-shadow"><a href="#"></a></div>
+						<div class="team-leader-shadow"></div>
 						<img src="img/akanksha_sachan.jpg" alt="">
 						<ul>
 							<li><a href="#" class="fa fa-twitter"></a></li>
@@ -417,7 +417,7 @@
 				</div>
 				<div class="team-leader-box">
 					<div class="team-leader  wow fadeInDown delay-06s">
-						<div class="team-leader-shadow"><a href="#"></a></div>
+						<div class="team-leader-shadow"></div>
 						<img src="img/krishna.png" alt="">
 						<ul>
 							<li><a href="#" class="fa fa-twitter"></a></li>
@@ -435,7 +435,7 @@
 			<br>
 				<div class="team-leader-box">
 					<div class="team-leader  wow fadeInDown delay-06s">
-						<div class="team-leader-shadow"><a href="#"></a></div>
+						<div class="team-leader-shadow"></div>
 						<img src="img/akshat_lad.jpg" alt="">
 						<ul>
 							<li><a href="#" class="fa fa-twitter"></a></li>
@@ -450,7 +450,7 @@
 				</div>
 				<div class="team-leader-box">
 					<div class="team-leader  wow fadeInDown delay-06s">
-						<div class="team-leader-shadow"><a href="#"></a></div>
+						<div class="team-leader-shadow"></div>
 						<img src="img/pradnesh_patil.jpg" alt="">
 						<ul>
 							<li><a href="#" class="fa fa-twitter"></a></li>
@@ -465,7 +465,7 @@
 				</div>
 				<div class="team-leader-box">
 					<div class="team-leader  wow fadeInDown delay-06s">
-						<div class="team-leader-shadow"><a href="#"></a></div>
+						<div class="team-leader-shadow"></div>
 						<img src="img/Hari.jpg" alt="">
 						<ul>
 							<li><a href="#" class="fa fa-twitter"></a></li>
@@ -481,7 +481,7 @@
 				<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 				<div class="team-leader-box">
 					<div class="team-leader  wow fadeInDown delay-06s">
-						<div class="team-leader-shadow"><a href="#"></a></div>
+						<div class="team-leader-shadow"></div>
 						<img src="img/devansh_garg.jpg" alt="">
 						<ul>
 							<li><a href="#" class="fa fa-twitter"></a></li>
@@ -497,7 +497,7 @@
 
 				<div class="team-leader-box">
 					<div class="team-leader  wow fadeInDown delay-06s">
-						<div class="team-leader-shadow"><a href="#"></a></div>
+						<div class="team-leader-shadow"></div>
 						<img src="img/subham_sharma.jpg" alt="">
 						<ul>
 							<li><a href="#" class="fa fa-twitter"></a></li>
@@ -513,7 +513,7 @@
 
 				<div class="team-leader-box">
 					<div class="team-leader  wow fadeInDown delay-06s">
-						<div class="team-leader-shadow"><a href="#"></a></div>
+						<div class="team-leader-shadow"></div>
 						<img src="img/devansh_bangad.jpg" alt="">
 						<ul>
 							<li><a href="#" class="fa fa-twitter"></a></li>
@@ -530,7 +530,7 @@
 
 				<div class="team-leader-box">
 						<div class="team-leader  wow fadeInDown delay-06s">
-							<div class="team-leader-shadow"><a href="#"></a></div>
+							<div class="team-leader-shadow"></div>
 							<img src="img/soham_de.jpg" alt="">
 							<ul>
 								<li><a href="#" class="fa fa-twitter"></a></li>
@@ -546,7 +546,7 @@
 
 				<div class="team-leader-box">
 						<div class="team-leader  wow fadeInDown delay-06s">
-							<div class="team-leader-shadow"><a href="#"></a></div>
+							<div class="team-leader-shadow"></div>
 							<img src="img/ravi_kumar.jpeg" alt="">
 							<ul>
 								<li><a href="#" class="fa fa-twitter"></a></li>
@@ -564,7 +564,7 @@
 			<h2>Web Team</h2>
 				<div class="team-leader-box">
 					<div class="team-leader  wow fadeInDown delay-06s">
-						<div class="team-leader-shadow"><a href="#"></a></div>
+						<div class="team-leader-shadow"></div>
 						<img src="img/kushal.jpg" alt="">
 						<ul>
 							<li><a href="#" class="fa fa-twitter"></a></li>
@@ -579,7 +579,7 @@
 				</div>
 				<div class="team-leader-box">
 					<div class="team-leader  wow fadeInDown delay-06s">
-						<div class="team-leader-shadow"><a href="#"></a></div>
+						<div class="team-leader-shadow"></div>
 						<img src="img/silu.jpg" alt="">
 						<ul>
 							<li><a href="#" class="fa fa-twitter"></a></li>
@@ -595,7 +595,7 @@
 				<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 				<div class="team-leader-box">
 					<div class="team-leader  wow fadeInDown delay-06s">
-						<div class="team-leader-shadow"><a href="#"></a></div>
+						<div class="team-leader-shadow"></div>
 						<img src="img/bhavesh.jpg" alt="">
 						<ul>
 							<li><a href="#" class="fa fa-twitter"></a></li>
@@ -610,7 +610,7 @@
 				</div>
 				<div class="team-leader-box">
 					<div class="team-leader  wow fadeInDown delay-06s">
-						<div class="team-leader-shadow"><a href="#"></a></div>
+						<div class="team-leader-shadow"></div>
 						<img src="img/shubhojit_das.jpg" alt="">
 						<ul>
 							<li><a href="#" class="fa fa-twitter"></a></li>
