--- a/team_page/index.html
+++ b/team_page/index.html
@@ -374,7 +374,7 @@
 						<img src="img/aditya.jpg" alt="">
 						<ul>
 							
-							<li><a href="#" class="fa fa-facebook"></a></li>
+							<li><a href="https://www.facebook.com/im.AdiPatil" class="fa fa-facebook"></a></li>
 							
 							<li><a href="#" class="fa fa-google-plus"></a></li>
 						</ul>
@@ -388,9 +388,7 @@
 						<div class="team-leader-shadow"></div>
 						<img src="img/Dp.jpg" alt="">
 						<ul>
-							<li><a href="#" class="fa fa-twitter"></a></li>
-							<li><a href="#" class="fa fa-facebook"></a></li>
-							<li><a href="#" class="fa fa-pinterest"></a></li>
+							<li><a href="https://www.facebook.com/amey.nikose" class="fa fa-facebook"></a></li>
 							<li><a href="#" class="fa fa-google-plus"></a></li>
 						</ul>
 					</div>
@@ -404,9 +402,7 @@
 						<div class="team-leader-shadow"></div>
 						<img src="img/akanksha_sachan.jpg" alt="">
 						<ul>
-							<li><a href="#" class="fa fa-twitter"></a></li>
-							<li><a href="#" class="fa fa-facebook"></a></li>
-							<li><a href="#" class="fa fa-pinterest"></a></li>
+							<li><a href="https://www.facebook.com/akanksha.sachan.967" class="fa fa-facebook"></a></li>
 							<li><a href="#" class="fa fa-google-plus"></a></li>
 						</ul>
 					</div>
@@ -419,10 +415,8 @@
 						<div class="team-leader-shadow"></div>
 						<img src="img/krishna.png" alt="">
 						<ul>
-							<li><a href="#" class="fa fa-twitter"></a></li>
-							<li><a href="#" class="fa fa-facebook"></a></li>
-							<li><a href="#" class="fa fa-pinterest"></a></li>
-							<li><a href="#" class="fa fa-google-plus"></a></li>
+							<li><a href="https://www.facebook.com/Krishna.nair4" class="fa fa-facebook"></a></li>
+							<li><a href="mailto:krishnarn00@gmail.com" class="fa fa-google-plus"></a></li>
 						</ul>
 					</div>
 					<h3 class="wow fadeInDown delay-06s">Krishna Nair</h3>
@@ -437,9 +431,7 @@
 						<div class="team-leader-shadow"></div>
 						<img src="img/akshat_lad.jpg" alt="">
 						<ul>
-							<li><a href="#" class="fa fa-twitter"></a></li>
-							<li><a href="#" class="fa fa-facebook"></a></li>
-							<li><a href="#" class="fa fa-pinterest"></a></li>
+							<li><a href="https://www.facebook.com/profile.php?id=100017233788808" class="fa fa-facebook"></a></li>
 							<li><a href="#" class="fa fa-google-plus"></a></li>
 						</ul>
 					</div>
@@ -452,9 +444,7 @@
 						<div class="team-leader-shadow"></div>
 						<img src="img/pradnesh_patil.jpg" alt="">
 						<ul>
-							<li><a href="#" class="fa fa-twitter"></a></li>
-							<li><a href="#" class="fa fa-facebook"></a></li>
-							<li><a href="#" class="fa fa-pinterest"></a></li>
+							<li><a href="https://www.facebook.com/pradnesh.patil.752" class="fa fa-facebook"></a></li>
 							<li><a href="#" class="fa fa-google-plus"></a></li>
 						</ul>
 					</div>
@@ -467,10 +457,8 @@
 						<div class="team-leader-shadow"></div>
 						<img src="img/Hari.jpg" alt="">
 						<ul>
-							<li><a href="#" class="fa fa-twitter"></a></li>
-							<li><a href="#" class="fa fa-facebook"></a></li>
-							<li><a href="#" class="fa fa-pinterest"></a></li>
-							<li><a href="#" class="fa fa-google-plus"></a></li>
+							<li><a href="https://www.facebook.com/harikrishnanama1500" class="fa fa-facebook"></a></li>
+							<li><a href="mailto:harinama1500@gmail.com" class="fa fa-google-plus"></a></li>
 						</ul>
 					</div>
 					<h3 class="wow fadeInDown delay-06s">Hari Krishna Nama</h3>
@@ -483,9 +471,7 @@
 						<div class="team-leader-shadow"></div>
 						<img src="img/devansh_garg.jpg" alt="">
 						<ul>
-							<li><a href="#" class="fa fa-twitter"></a></li>
-							<li><a href="#" class="fa fa-facebook"></a></li>
-							<li><a href="#" class="fa fa-pinterest"></a></li>
+							<li><a href="https://www.facebook.com/devansh.garg.549" class="fa fa-facebook"></a></li>
 							<li><a href="#" class="fa fa-google-plus"></a></li>
 						</ul>
 					</div>
@@ -499,9 +485,7 @@
 						<div class="team-leader-shadow"></div>
 						<img src="img/subham_sharma.jpg" alt="">
 						<ul>
-							<li><a href="#" class="fa fa-twitter"></a></li>
 							<li><a href="#" class="fa fa-facebook"></a></li>
-							<li><a href="#" class="fa fa-pinterest"></a></li>
 							<li><a href="#" class="fa fa-google-plus"></a></li>
 						</ul>
 					</div>
@@ -515,10 +499,8 @@
 						<div class="team-leader-shadow"></div>
 						<img src="img/devansh_bangad.jpg" alt="">
 						<ul>
-							<li><a href="#" class="fa fa-twitter"></a></li>
-							<li><a href="#" class="fa fa-facebook"></a></li>
-							<li><a href="#" class="fa fa-pinterest"></a></li>
-							<li><a href="#" class="fa fa-google-plus"></a></li>
+							<li><a href="https://www.facebook.com/devansh.bangad" class="fa fa-facebook"></a></li>
+							<li><a href="mailto:devanshbangad128@gmail.com" class="fa fa-google-plus"></a></li>
 						</ul>
 					</div>
 					<h3 class="wow fadeInDown delay-06s">Devansh Bangad</h3>
@@ -532,9 +514,7 @@
 							<div class="team-leader-shadow"></div>
 							<img src="img/soham_de.jpg" alt="">
 							<ul>
-								<li><a href="#" class="fa fa-twitter"></a></li>
-								<li><a href="#" class="fa fa-facebook"></a></li>
-								<li><a href="#" class="fa fa-pinterest"></a></li>
+								<li><a href="https://www.facebook.com/soham.de.50" class="fa fa-facebook"></a></li>
 								<li><a href="#" class="fa fa-google-plus"></a></li>
 							</ul>
 						</div>
@@ -548,9 +528,7 @@
 							<div class="team-leader-shadow"></div>
 							<img src="img/ravi_kumar.jpeg" alt="">
 							<ul>
-								<li><a href="#" class="fa fa-twitter"></a></li>
 								<li><a href="#" class="fa fa-facebook"></a></li>
-								<li><a href="#" class="fa fa-pinterest"></a></li>
 								<li><a href="#" class="fa fa-google-plus"></a></li>
 							</ul>
 						</div>
@@ -566,10 +544,8 @@
 						<div class="team-leader-shadow"></div>
 						<img src="img/kushal.jpg" alt="">
 						<ul>
-							<li><a href="#" class="fa fa-twitter"></a></li>
-							<li><a href="#" class="fa fa-facebook"></a></li>
-							<li><a href="#" class="fa fa-pinterest"></a></li>
-							<li><a href="#" class="fa fa-google-plus"></a></li>
+							<li><a href="https://www.facebook.com/kushal.yadav.5268" class="fa fa-facebook"></a></li>
+							<li><a href="mailto:yadavkushal20@gmail.com" class="fa fa-google-plus"></a></li>
 						</ul>
 					</div>
 					<h3 class="wow fadeInDown delay-06s">Kushal Yadav</h3>
@@ -581,10 +557,8 @@
 						<div class="team-leader-shadow"></div>
 						<img src="img/silu.jpg" alt="">
 						<ul>
-							<li><a href="#" class="fa fa-twitter"></a></li>
-							<li><a href="#" class="fa fa-facebook"></a></li>
-							<li><a href="#" class="fa fa-pinterest"></a></li>
-							<li><a href="#" class="fa fa-google-plus"></a></li>
+							<li><a href="https://www.facebook.com/silu.panda.10" class="fa fa-facebook"></a></li>
+							<li><a href="mailto:pandasilu428@gmail.com" class="fa fa-google-plus"></a></li>
 						</ul>
 					</div>
 					<h3 class="wow fadeInDown delay-06s">Silu Panda</h3>
@@ -597,25 +571,22 @@
 						<div class="team-leader-shadow"></div>
 						<img src="img/bhavesh.jpg" alt="">
 						<ul>
-							<li><a href="#" class="fa fa-twitter"></a></li>
-							<li><a href="#" class="fa fa-facebook"></a></li>
-							<li><a href="#" class="fa fa-pinterest"></a></li>
-							<li><a href="#" class="fa fa-google-plus"></a></li>
+							<li><a href="https://www.facebook.com/profile.php?id=100027666019988" class="fa fa-facebook"></a></li>
+							<li><a href="mailto:bpatil2712@gmail.com" class="fa fa-google-plus"></a></li>
 						</ul>
 					</div>
 					<h3 class="wow fadeInDown delay-06s">Bhavesh Patil</h3>
 					<span class="wow fadeInDown delay-06s">Web Convener</span>
-					<p class="wow fadeInDown delay-06s">Exploring tech. Coding is Love.</p>
+					<p class="wow fadeInDown delay-06s">Exploring the tech. Coding is Love :)</p>
 				</div>
 				<div class="team-leader-box">
 					<div class="team-leader  wow fadeInDown delay-06s">
 						<div class="team-leader-shadow"></div>
 						<img src="img/shubhojit_das.jpg" alt="">
 						<ul>
-							<li><a href="#" class="fa fa-twitter"></a></li>
-							<li><a href="#" class="fa fa-facebook"></a></li>
-							<li><a href="#" class="fa fa-pinterest"></a></li>
-							<li><a href="#" class="fa fa-google-plus"></a></li>
+		
+							<li><a href="https://www.facebook.com/shubojit.das.37" class="fa fa-facebook"></a></li>
+							<li><a href="mailto:" class="fa fa-google-plus"></a></li>
 						</ul>
 					</div>
 					<h3 class="wow fadeInDown delay-06s">Shubojit Das</h3>
